=head1 NAME

Changes - Apache::SizeLimit change logfile

=head1 CHANGES

=over 6

=item 0.93 2010-10-02

Add PerlModule and PerlLoadModule doc directives.
[Fred Moyer <fred@redhotpenguin.com>]

Fix overlooked bug where handler expected to be called as a method handler,
but was documented to be called like a normal Perl cleanup handler ala
'PerlCleanupHandler Apache2::SizeLimit'
[Fred Moyer <fred@redhotpenguin.com>]

=item 0.92 2010-09-23

Export USE_SMAPS, VERSION, and REQUEST_COUNT to Apache::SizeLimit
from Apache::SizeLimit::Core.
Call _platform_check_size as a class method to prevent error when
USE_SMAPS=0, RT #33303
Reported by: jgoodridge@alum.dartmouth.edu
[Fred Moyer <fred@redhotpenguin.com>]

  *********** HEADS UP - SHARED CODE BASE - HEADS UP  ***********
  Apache-SizeLimit has been hybridized.
  It has been split into 3 packages.  
    1) Apache::SizeLimit  - User API for httpd 1.3.x / mod_perl 1.x
    2) Apache2::SizeLimit - User API for httpd 2.x / mod_perl 2.x

    3) Apache::SizeLimit::Core - Interal Shared Functionality
         _NEVER_ use this module directly.
[Philip M. Gollucci <pgollucci@p6m7g8.com>]

Skip tests on OS X (darwin) due to broken getrusage(3)
[Fred Moyer <fred@redhotpenguin.com>, 
 Philip M. Gollucci <pgollucci@p6m7g8.com>]

Added a SUPPORT section to the docs.
[Dave Rolsky <autarch@urth.org>]

=item 0.91 2007-03-29

Fix Can't call method "child_terminate" on an undefined value
By add_cleanup_handler() pass $r to _exit_if_to_big() via shift
[David Wheeler <david@kineticode.com>]

=item 0.9 2006-07-12

Copied from the mod_perl 1 core for an independent CPAN release.
[Philip M. Gollucci <pgollucci@p6m7g8.com>]

Added support for using Linux::Smaps (on Linux only, obviously) to
get much more accurate shared memory numbers on 2.6.x kernels. Taken
from Apache2::SizeLimit.
[Dave Rolsky <autarch@urth.org>]

Added support for using Linux::Pid to get the parent pid on
Linux. This fixes a long-standing bug that caused this module to never