@@ -6,6 +6,11 @@ Changes - Apache::SizeLimit change logfile
 
 =over 6
 
+=item 0.94 2011-01-19
+
+Install Apache::SizeLimit in arch specific location, the same as mod_perl.  This prevents problems when A-SL is built outside the mod_perl build tree.
+[Fred Moyer]
+
 =item 0.93 2010-10-02
 
 Add PerlModule and PerlLoadModule doc directives.
